--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 bonuses.txt
 # To run the game you'll need to exec the script found in the resources/cards
 src/main/resources/cards/*.png
+.DS_Store
 .DS_Store/
 .DS_Store/*
+#
